// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it hides components above the sm breakpoint 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: center;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c1 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c0 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    display: none;
  }
}

<div
  class="c0"
  display="block,block,none,none,none"
>
  <div
    class="c1 c2"
    data-id="placeholder"
    display="flex"
    height="120"
    overflow="hidden"
    shape="rectangle"
    width="100%"
  >
    <div
      class="c3"
      style="margin-top: 2px;"
    >
      Hidden above sm.
    </div>
  </div>
</div>
`;

exports[`it hides components below the md breakpoint 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: center;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: none;
}

.c1 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
  display="none,none,block,block,block"
>
  <div
    class="c1 c2"
    data-id="placeholder"
    display="flex"
    height="120"
    overflow="hidden"
    shape="rectangle"
    width="100%"
  >
    <div
      class="c3"
      style="margin-top: 2px;"
    >
      Hidden below md.
    </div>
  </div>
</div>
`;

exports[`it hides text nodes above md 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: inline;
}

@media screen and (min-width:576px) {
  .c0 {
    display: inline;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    display: inline;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    display: none;
  }
}

<span>
  The following text node is hidden above md:
  <span
    class="-span c0"
    display="inline,inline,inline,none,none"
  >
    Hidden above md.
  </span>
</span>
`;

exports[`it hides text nodes below md 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: none;
}

@media screen and (min-width:576px) {
  .c0 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    display: inline;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    display: inline;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    display: inline;
  }
}

<span>
  The following text node is hidden below md:
  <span
    class="-span c0"
    display="none,none,inline,inline,inline"
  >
    Hidden below md.
  </span>
</span>
`;

exports[`it renders a Hidden 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #e3e3e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: center;
}

.c1 {
  width: 100%;
  min-width: 10px;
  height: 120px;
  border: 2px solid rgba(51,51,51,0.3);
}

@media screen and (min-width:576px) {
  .c0 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    display: block;
  }
}

@media screen and (min-width:992px) {
  .c0 {
    display: block;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
  display="block,block,block,block,block"
>
  <div
    class="c1 c2"
    data-id="placeholder"
    display="flex"
    height="120"
    overflow="hidden"
    shape="rectangle"
    width="100%"
  >
    <div
      class="c3"
      style="margin-top: 2px;"
    >
      Not hidden
    </div>
  </div>
</div>
`;
